<resources>
    <string name="app_name">Movies</string>
    <string name="movie_duration">%1$s minutes</string>
    <string name="cast">Cast</string>
    <string name="related">Related</string>
    <string name="actor_profile_photo">Actor profile photo</string>
    <string name="actor_born">Born %1$s</string>
    <string name="movie_credits">Movie Credits</string>
    <string name="actor_died">Died %1$s</string>
    <string name="options">Options</string>
    <string name="third_party_libraries">Third-Party Libraries</string>
    <string name="licenses_and_legal_notices">Licenses and legal notices</string>
    <string name="theme">Theme</string>
    <string name="change_app_theme">Change the theme of the app</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="reviews">Reviews</string>
    <string name="television_credits">Television Credits</string>
    <string name="seasons">Seasons</string>
    <string name="connectivity_issue">There is a connectivity issue…</string>
    <string name="no_rating">No Rating</string>
    <string name="toggle_application_component">Toggle Application Component</string>
    <string name="switch_from_real_to_test_dependencies">Switch from Real to Test dependencies</string>
</resources>
