<?xml version="1.0" encoding="utf-8"?>
<com.dev.cameronc.movies.options.OptionsScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            style="@style/Toolbar"
            android:id="@+id/options_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/options" />

        <LinearLayout
            android:id="@+id/change_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16sp">

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_app_theme" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/third_party_libraries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/third_party_libraries"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/licenses_and_legal_notices" />
        </LinearLayout>
    </LinearLayout>

</com.dev.cameronc.movies.options.OptionsScreen>